add index.html file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <header class="header">
+     <header class="header">
         <div class="container header-container">
         <nav class="navigation">
             <a class="logo" href="./index.html">Web<span  class="logo-part">Studio</span></a>
@@ -30,16 +30,21 @@
                 <li><a class="address-link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
+        <button type="button" class="open-menu-btn">
+            <svg width="24" height="24">
+                <use href="./images/icons.svg#icon-Group"></use>
+            </svg>
+        </button>
         </div>
-    </header>
+    </header>  
     <main class="main">
-        <section class="hero">
+         <section class="hero">
             <div class="container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
             <button type="button" class="hero-btn-main">Order Service</button>
         </div>
-        </section>
-        <section class="features"> 
+        </section> 
+         <section class="features">
             <div class="container">
             <h2 class="visually-hidden">Features</h2>
             <ul class="features-list">
@@ -78,8 +83,8 @@
                 </li>
             </ul>
             </div>
-        </section>
-        <section class="team">
+        </section>   
+         <section class="team">
             <div class="container">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
@@ -233,8 +238,8 @@
                 </li>
             </ul>
 </div>
-        </section>
-        <section class="portfolio">
+        </section>  
+         <section class="portfolio">
             <div class="container">
             <h2 class="portfolio-title">Our Portfolio</h2>
             <ul class="portfolio-list">
@@ -299,9 +304,9 @@
                 </li> 
             </ul>
             </div>
-        </section>
+        </section>  
         </main>
-        <footer class="footer">
+        <!-- <footer class="footer">
         <div class="container-footer">
         <div class="footer-logo-wrap">
     <a class="footer-logo" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
@@ -355,9 +360,9 @@
             </div>
         </div>
         
-    </footer>
+    </footer> -->
 
-    <div class="backdrop">
+    <!-- <div class="backdrop">
         <div class="modal">
             <button type="button" class="modal-open-btn">
                 <svg class="icon-x" width="8" height="8">
@@ -405,6 +410,6 @@
             <button type="submit" class="modal-btn">Send</button>
         </form>
         </div>
-    </div>
+    </div> -->
 </body>
 </html>
