add index.html file

--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
                 <use href="./images/icons.svg#icon-Group"></use>
             </svg>
         </button>
-
-
         </div>
         <div class="mob-menu ">
             <div>
@@ -94,6 +92,7 @@
 
 
         </div>
+
     </header>  
     <main class="main">
          <section class="hero">
@@ -424,11 +423,11 @@
         </section>  
         </main>
           <footer class="footer">
-        <div class="container-footer">
+        <div class="container container-footer">
         <div class="footer-logo-wrap">
     <a class="footer-logo" href="./index.html">Web<span class="footer-logo-part">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </div>
+</div>
         <div class="footer-cover-wrap">
         <p class="footer-text-icon"> Social media</p>
         <ul class="icon-list-footer">
@@ -462,6 +461,8 @@
             </li>
         </ul>
         </div>
+
+
         <div class="footer-wrap">
             <p class="footer-text-item">Subscribe</p>
             <form class="footer-form">
@@ -479,7 +480,7 @@
         
     </footer>  
 
-    <!-- <div class="backdrop">
+     <div class="backdrop ">
         <div class="modal">
             <button type="button" class="modal-open-btn">
                 <svg class="icon-x" width="8" height="8">
@@ -527,6 +528,6 @@
             <button type="submit" class="modal-btn">Send</button>
         </form>
         </div>
-    </div> -->
+    </div> 
 </body>
 </html>
