--- a/index.html
+++ b/index.html
@@ -36,10 +36,11 @@
             </svg>
         </button>
         </div>
+
         <div class="mob-menu ">
             <div>
 <button type="button" class="close-menu-btn">
-    <svg class="icon-x" width="8" height="8">
+    <svg class="icon-x-x" width="8" height="8">
         <use href="./images/icons.svg#icon-close-black"></use>
     </svg>
 </button>
@@ -142,7 +143,7 @@
             </div>
         </section>   
          <section class="team">
-            <div class="container">
+            <div class="container team-team">
             <h2 class="team-title">Our Team</h2>
             <ul class="team-list">
                 <li class="team-item">
